feat: admin get & add & delete marks
